--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -14,8 +14,9 @@
             <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
           <% end %>
         </div>
-        
-      </div>
+        <div>
+         <%= render 'favorites/favorite_button', micropost: micropost %>
+        </div>
     </li>
   <% end %>
   <%= paginate microposts %>
